src-tauri/test_all.txt
cargo :    Compiling fireworks-collaboration v0.1.0 (C:\Users\34404\Documents\GitHub\fireworks-collaboration\src-tauri)
所在位置 行:1 字符: 1
+ cargo test 2>&1 | Out-File -Encoding UTF8 test_all.txt; $LASTEXITCODE
+ ~~~~~~~~~~~~~~~
    + CategoryInfo          : NotSpecified: (   Compiling fi...tion\src-tauri):String) [], RemoteException
    + FullyQualifiedErrorId : NativeCommandError
 
error: couldn't read `tests\tasks\task_registry_and_service.rs`: stream did not contain valid UTF-8
  --> tests\tasks\mod.rs:21:1
   |
21 | mod task_registry_and_service;
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
note: byte `190` is not valid utf-8
  --> tests\tasks\task_registry_and_service.rs:1:5
   |
1  | //! 锟桔合诧拷锟皆ｏ拷TaskRegistry & Git Service Progress / Cancel (Roadmap Phase 2 / v1.15)
   |     ^

error: could not compile `fireworks-collaboration` (test "tasks") due to 1 previous error
warning: build failed, waiting for other jobs to finish...
warning: associated items `new`, `expect`, and `expect_with_output` are never used
  --> tests\e2e\..\common\mock_runner.rs:20:12
   |
19 | impl MockGitRunner {
   | ------------------ associated items in this implementation
20 |     pub fn new() -> Self {
   |            ^^^
...
26 |     pub fn expect(&self, args: Option<Vec<&str>>, output: Result<Output, GitError>) {
   |            ^^^^^^
...
37 |     pub fn expect_with_output(
   |            ^^^^^^^^^^^^^^^^^^
   |
   = note: `#[warn(dead_code)]` on by default

warning: method `expect_with_output` is never used
  --> tests\submodule\..\common\mock_runner.rs:37:12
   |
19 | impl MockGitRunner {
   | ------------------ method in this implementation
...
37 |     pub fn expect_with_output(
   |            ^^^^^^^^^^^^^^^^^^
   |
   = note: `#[warn(dead_code)]` on by default

warning: associated items `new`, `expect`, and `expect_with_output` are never used
  --> tests\proxy\..\common\mock_runner.rs:20:12
   |
19 | impl MockGitRunner {
   | ------------------ associated items in this implementation
20 |     pub fn new() -> Self {
   |            ^^^
...
26 |     pub fn expect(&self, args: Option<Vec<&str>>, output: Result<Output, GitError>) {
   |            ^^^^^^
...
37 |     pub fn expect_with_output(
   |            ^^^^^^^^^^^^^^^^^^
   |
   = note: `#[warn(dead_code)]` on by default

warning: associated items `new`, `expect`, and `expect_with_output` are never used
  --> tests\events\..\common\mock_runner.rs:20:12
   |
19 | impl MockGitRunner {
   | ------------------ associated items in this implementation
20 |     pub fn new() -> Self {
   |            ^^^
...
26 |     pub fn expect(&self, args: Option<Vec<&str>>, output: Result<Output, GitError>) {
   |            ^^^^^^
...
37 |     pub fn expect_with_output(
   |            ^^^^^^^^^^^^^^^^^^
   |
   = note: `#[warn(dead_code)]` on by default

error[E0433]: failed to resolve: use of undeclared type `CliGitRunner`
  --> tests\git\git_clone_shallow_and_depth.rs:43:62
   |
43 |         let svc = DefaultGitService::new(std::sync::Arc::new(CliGitRunner::new()));
   |                                                              ^^^^^^^^^^^^ use of undeclared type `CliGitRunner`
   |
   = note: struct `crate::submodule::common::git_scenarios::tests_scenarios_smoke::CliGitRunner` exists but is inaccessible
help: consider importing this struct
   |
17 +     use fireworks_collaboration_lib::core::git::CliGitRunner;
   |

error[E0433]: failed to resolve: use of undeclared type `CliGitRunner`
  --> tests\git\git_clone_shallow_and_depth.rs:57:62
   |
57 |         let svc = DefaultGitService::new(std::sync::Arc::new(CliGitRunner::new()));
   |                                                              ^^^^^^^^^^^^ use of undeclared type `CliGitRunner`
   |
   = note: struct `crate::submodule::common::git_scenarios::tests_scenarios_smoke::CliGitRunner` exists but is inaccessible
help: consider importing this struct
   |
17 +     use fireworks_collaboration_lib::core::git::CliGitRunner;
   |

error[E0433]: failed to resolve: use of undeclared type `CliGitRunner`
   --> tests\git\git_clone_shallow_and_depth.rs:223:74
    |
223 |                     let svc = DefaultGitService::new(std::sync::Arc::new(CliGitRunner::new()));
    |                                                                          ^^^^^^^^^^^^ use of undeclared type `CliGitRunner`
    |
    = note: struct `crate::submodule::common::git_scenarios::tests_scenarios_smoke::CliGitRunner` exists but is inaccessible
help: consider importing this struct
    |
203 +     use fireworks_collaboration_lib::core::git::CliGitRunner;
    |

warning: associated items `new`, `expect`, and `expect_with_output` are never used
  --> tests\workspace\..\common\mock_runner.rs:20:12
   |
19 | impl MockGitRunner {
   | ------------------ associated items in this implementation
20 |     pub fn new() -> Self {
   |            ^^^
...
26 |     pub fn expect(&self, args: Option<Vec<&str>>, output: Result<Output, GitError>) {
   |            ^^^^^^
...
37 |     pub fn expect_with_output(
   |            ^^^^^^^^^^^^^^^^^^
   |
   = note: `#[warn(dead_code)]` on by default

warning: associated items `new`, `expect`, and `expect_with_output` are never used
  --> tests\quality\..\common\mock_runner.rs:20:12
   |
19 | impl MockGitRunner {
   | ------------------ associated items in this implementation
20 |     pub fn new() -> Self {
   |            ^^^
...
26 |     pub fn expect(&self, args: Option<Vec<&str>>, output: Result<Output, GitError>) {
   |            ^^^^^^
...
37 |     pub fn expect_with_output(
   |            ^^^^^^^^^^^^^^^^^^
   |
   = note: `#[warn(dead_code)]` on by default

For more information about this error, try `rustc --explain E0433`.
error: could not compile `fireworks-collaboration` (test "git") due to 3 previous errors
warning: `fireworks-collaboration` (test "e2e") generated 1 warning
warning: `fireworks-collaboration` (test "submodule") generated 1 warning
warning: `fireworks-collaboration` (test "proxy") generated 1 warning
warning: `fireworks-collaboration` (test "events") generated 1 warning
warning: `fireworks-collaboration` (test "workspace") generated 1 warning
warning: `fireworks-collaboration` (test "quality") generated 1 warning
